--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && npx prisma migrate deploy && node prisma/seed.js && next dev",
+    "dev": "prisma generate && npx prisma migrate deploy && next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
